fix submit button spacing

--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@ body {
     background-color: var(--first-color);
     font-family: var(--body-font);
     color: var(--neutral-color);
-
+    font-size: var(--small-font-size);
     scroll-behavior: smooth;
 }
 
@@ -124,6 +124,7 @@ h1 {
 
 .form-row label {
     margin-bottom: 15px;
+    font-weight: var(--font-medium);
 }
 
 .form-row input[type='text']:invalid,
@@ -140,7 +141,7 @@ h1 {
     flex-direction: column;
     align-items: flex-start;
     justify-content: center;
-    margin-bottom: 60px;
+    margin: 40px 0 60px 0;
 }
 
 .submit-button {
